--- a/main_app/templates/register.html
+++ b/main_app/templates/register.html
@@ -1,6 +1,36 @@
-{% include "layout.html" %}
+{% extends "layout.html" %}
+{% block help_developer %}
 
-{% block content %}
+ <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ >
+	# This Section help you to find 
+	  specific section. 
+
+	0: head
+		0.0: styles
+		0.1: fonts
+
+	1: body
+		1.0: main
+			1.0.0: Background Image
+				1.0.0.0: Navigation men
+				1.0.0.1: Notice text
+				
+			1.0.1: All main content 
+			
+
+	3: Footer section
+		3.0: Using flexbox for three column
+			3.0.0: Contact
+			3.0.1: Quick link
+			3.0.2: Follow us
+			
+		3.1: copyright and other important thing
+
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+{% endblock %}
+
+{% block body %}
 <div class="content-section">
 	<div>
 		<form method="POST" action="">
@@ -77,4 +107,4 @@
 			Already have an Account? <a href="{{ url_for('login') }}">Sign In</a> 
 		</small>
 	</div>
-{% endblock content %}
+{% endblock body %}
